recursion.lessons.recursion.koch.Koch.scala.error
Koch:26: error: type mismatch;
 found   : Unit
 required: Int
		snowSide(l=l-1,length)}
                          ^